--- a/gitterdynamik.tex
+++ b/gitterdynamik.tex
@@ -1,19 +1,19 @@
 \section{Gitterdynamik} \label{kap:4}
 Physikalische Eigenschaften von FK bestimmt durch:
 \begin{itemize}
-	\item Bewegung der Atome von Gleichgewichtslage
+	\item Bewegung der Atome aus Gleichgewichtslage
 	(Schallwellen, spezifische Wärme, Wärmeleitfähigkeit, thermische Ausdehnung etc.)
 	\item Bewegung (fast freier) Elektronen (elektronische Eigenschaften)
 \end{itemize}
 Beide Phänomene sind nicht unabhängig. Hier: Born-Oppenheimer-Näherung (adiabatische Näherung):
 \begin{itemize}
 	\item Atomrümpfe bewegen aufgrund höherer Masse langsamer als Valenzelektronen.
-	\item Verschiebung eines Atomrumpfs $\rightarrow$ 'instantane' Anpassung der Elektronenverteilung
-	Dabei steigt Gesamtenergie des Elektronensystems Elektronen bleiben aber im Grundzustand (adiabatischer Prozess)
+	\item Verschiebung eines Atomrumpfs $\rightarrow$ 'instantane' Anpassung der Elektronenverteilung.
+	Dabei steigt Gesamtenergie des Elektronensystems, die Elektronen bleiben aber im Grundzustand (adiabatischer Prozess)
 	\item Atome zurück in GG-Lage. Elektronensystem folgt und kehrt zur ursprünglichen Gesamtenergie zurück.
-	\item Alles in allem: Bewegung der Atomrümpfe $\rightarrow$ Energieänderung des Elektronensystems. 
+	\item Alles in Allem: Bewegung der Atomrümpfe $\rightarrow$ Energieänderung des Elektronensystems. 
 	$\rightarrow$ Potentialänderung der Atome (\textbf{Gitterdynamik}).
-	Elektronen bleiben dabei im Grundzustand, und sind unabhängig von der Bewegung der Atomen $\rightarrow$ Beschreibung im
+	Elektronen bleiben dabei im Grundzustand, und sind unabhängig von der Bewegung der Atome $\rightarrow$ Beschreibung im
 	ursprünglichem periodischen Potential. (\textbf{Elektronensystem} entkoppelt von Gitterdynamik)
 \end{itemize}
 
@@ -87,7 +87,7 @@ Weitere Vereinfachungen:
 					G = \frac{2 \pi}{a} \cdot p \quad (p \in \mathbb{Z})\text{, also} \quad q' = q + \frac{2 \pi}{a} \cdot p
 				\end{align*}
 				Begründung: $\frac{u_{s+1}}{u_{s}} = e^{iq'a} = e^{iqa}\cdot e^{i2\pi p} = e^{iqa}$
-				\item[$\rightarrow$] Bei Rücktransformation in die 1. BZ kann Wellenvektor des Vorzeichen wechseln. Das entspricht einem VZ- Wechsel der Phasengeschwindigkeit $v_P = \omega / q$. Die Gruppengeschwindigkeit $v_G = \partial\omega / \partial q$ bleibt gleich ($\rightsquigarrow$ Energietransport der Welle).
+				\item[$\rightarrow$] Bei Rücktransformation in die 1. BZ kann Wellenvektor das Vorzeichen wechseln. Das entspricht einem VZ-Wechsel der Phasengeschwindigkeit $v_P = \omega / q$. Die Gruppengeschwindigkeit $v_G = \partial\omega / \partial q$ bleibt gleich ($\rightsquigarrow$ Energietransport der Welle).
 			\end{itemize}
 		\item[(ii)] \textbf{Grenzfälle:} \\
 			\begin{itemize}
@@ -122,7 +122,7 @@ Weitere Vereinfachungen:
 				\end{itemize} 
 			\end{itemize}
 	\end{itemize}
-	\item[(b)] \textbf{Linear Kette mit 2-atomiger Basis:} \\
+	\item[(b)] \textbf{Lineare Kette mit 2-atomiger Basis:} \\
 		Mit Federkonstante $c$ und Massen $m_A$, $m_B$.
 		\begin{figure}[H]
 			\centering
@@ -195,16 +195,16 @@ Weitere Vereinfachungen:
 				% 	\label{fig:4_2VisB}
 				% \end{figure} 
 				d.h.gegenphasige Schwingung.\\
-				Interpretation: Sind A, B Ionen mit unterschiedlichenLadungen entsteht ein oszillierendes elektrisches Dipolmoment. Damit koppeln Gitterschwingungen an elektromagnetischen Wellen (Infrarotbereich): \textbf{optischer Zweig} $\omega_0$.
+				Interpretation: Sind A, B Ionen mit unterschiedlichen Ladungen, entsteht ein oszillierendes elektrisches Dipolmoment. Damit koppeln Gitterschwingungen an elektromagnetischen Wellen (Infrarotbereich): \textbf{optischer Zweig} $\omega_0$.
 			\end{itemize}
 			\item[(ii)]  $q \rightarrow \pm \frac{\pi}{a}$ ($\lambda \rightarrow 2a$): $\omega_0^2 \rightarrow \frac{2c}{m_A}$ ($m_a < m_B$),\\
-			d.h. für $m_A \neq m_B$ tritt Frequenzlücke auf, in der keine Gitterschwingungen existieren. Das Bedeutet Anregung ist $\omega$ im Bereich der Lücke klingen exponentiell ab.
+			d.h. für $m_A \neq m_B$ tritt Frequenzlücke auf, in der keine Gitterschwingungen existieren. Das bedeutet Anregung ist $\omega$ im Bereich der Lücke klingen exponentiell ab.
 			\begin{align*}
 				-\frac{V}{U}\approx \frac{C(1+e^{\pm i\pi})}{2C-\omega_0^2m_B} = 0
 			\end{align*}
-			,d.h schwereres Untergitter B in Ruhe, A schwingt. Benachbarte Atome im A-Gitter Schwingen gegenphasig.
+			,d.h schwereres Untergitter B in Ruhe, A schwingt. Benachbarte Atome im A-Gitter schwingen gegenphasig.
 			\item[(iii)] Verallgemeinerung auf reale Kristalle:\\
-			Betrache Ausbreitung in Symmetrierichtung in 3D-Kristall.\\
+			Betrachte Ausbreitung in Symmetrierichtung in 3D-Kristall.\\
 			Es treten longitudinale (L) oder transversale (T) Schwingungen auf.
 		\end{itemize} 
 		1-atomige Basis: 1L, 2T (senkrecht aufeinander, falls isotrop, entartet)\\
@@ -229,24 +229,25 @@ Weitere Vereinfachungen:
 
 
 
-\subsection{Streuung an Kristallen mit Zeitlich veränderlichem Gitter} \label{kap:4_3}
+\subsection{Streuung an Kristallen mit zeitlich veränderlichem Gitter} \label{kap:4_3}
  Aus Kap: \ref{kap:3_1} Streuamplitude,
 \begin{align*}
 	A_B(\Delta \textbf{k})= \underbrace{\frac{A_0}{R^i}e^{i(k'R+k'R')}}_{=: \tilde{\tilde{A}}} e^{i\omega_0t} \underbrace{\int \rho(\textbf{r})e^{-i\Delta kr} dr}_{\text{vgl. kap \ref{kap:3_3}}}
 \end{align*}
 \begin{itemize}
-	\item[\textbf{Ann:}] Kristall mit 1-atomiger Basis (z.B. Neutronenstreuumg bisher)
-	\item[\textbf{Jetzt:}] $\textbf{r} = \underbrace{\textbf{R}_n}_{\text{GG-Pos. des n-ten Atoms}} + \textbf{u}_n(t)$ Zeitabhängige Auslenkung des n-ten Atoms um GG-Lage.
+	\item[\textbf{Ann:}] Kristall mit 1-atomiger Basis (z.B. Neutronenstreuung bisher)
+	\item[\textbf{Jetzt:}] $\textbf{r} = \underbrace{\textbf{R}_n}_{\text{GG-Pos. des n-ten Atoms}} + \textbf{u}_n(t)$\\
+	Zeitabhängige Auslenkung des n-ten Atoms um GG-Lage.
 \end{itemize}
 \begin{align*}
 	A_B(t) &= \tilde{\tilde{A}} e^{-i\omega_0 t} \sum_n \int \rho(\textbf{r}) e^{-i\Delta \textbf{k} \textbf{R}_n } e^{-i\Delta \textbf{k} \textbf{u}_n(t)} \mathrm{d}^3r\\
-	&= \tilde{\tilde{A}} e^{-i\omega_0 t} \sum_n \rho_n e^{-i\Delta \textbf{k} \textbf{R}_n } e^{-i\Delta \textbf{k} \textbf{u}_n(t)} \text{für punktförmigen Streuer}
+	&= \tilde{\tilde{A}} e^{-i\omega_0 t} \sum_n \rho_n e^{-i\Delta \textbf{k} \textbf{R}_n } e^{-i\Delta \textbf{k} \textbf{u}_n(t)} \text{ für punktförmigen Streuer}
 \end{align*}
 Auslenkung der Gitterschwingung klein gegenüber a, d.h.$\Delta \textbf{k} \textbf{u}_n(t) \ll 1$, damit
 \begin{align*}
 	A_B(t) \approx \tilde{\tilde{A}} e^{-i\omega_0 t} \sum_n \rho_n e^{-i\Delta \textbf{k} \textbf{R}_n } \left(  1 -i\Delta \textbf{k} \textbf{u}_n(t) - \frac{1}{2}(\Delta \textbf{k} \textbf{u}_n(t))\right)
 \end{align*}
-Innere Entiwicklung:
+Innere Entwicklung:
 \begin{align*}
 	A_B(t) \approx \tilde{\tilde{A}} e^{-i\omega_0 t} \sum_n \rho_n e^{-i\Delta \textbf{k} \textbf{R}_n } - \tilde{\tilde{A}} e^{-i\omega_0 t} \sum_n \rho_n i\Delta \textbf{k} \textbf{u}_n(t) e^{-i\Delta \textbf{k} \textbf{R}_n}
 \end{align*}
@@ -343,7 +344,7 @@ Phononen (am Rand der 1. BZ):
 	\end{itemize}
 	\item[(b)] \textbf{Kohärente inelastische Röntgenstreuung}
 	\begin{itemize}
-		\item Röntgenlicht ($E \approx$ 10 keV) hat den deutlich kleineres
+		\item Röntgenlicht ($E \approx$ 10 keV) hat deutlich kleineres
 		\begin{align*}
 			\frac{\delta E}{E} = \frac{10^{-2} \text{eV}}{10^{4} \text{eV}} \approx 10^{-6}
 		\end{align*}
@@ -448,7 +449,7 @@ Damit:
 
 $\rightarrow$ $D(\omega)$ ist hoch, wenn die Dispersionskurve flach ist.\\
 Extremfall: $D(\omega)$ divergiert für $v_g = 0$ (van-Hore Singularitäten)\\
-$\rightarrow$ für isotrope FK: Flächekonstanter Frequenz im rez. Raum $S_{\omega}$ ist Kugel mit Radius $|\textbf{q}|$:
+$\rightarrow$ für isotrope FK: Fläche konstanter Frequenz im rez. Raum $S_{\omega}$ ist Kugel mit Radius $|\textbf{q}|$:
 \begin{align}
 	\Rightarrow D(\omega) = \frac{V}{(2\pi)^3} \cdot \frac{4\pi q^2}{v_g} = \frac{V}{2\pi^2} \cdot \frac{q^2}{v_g}
 \end{align}
